Fixed spacing issues with small player

--- a/style.css
+++ b/style.css
@@ -205,14 +205,14 @@ a, a:link, a:visited, a:hover, a:active {
 .desktopLayout .column.main {
 	flex-grow: 1;
 	width: auto;
-	margin-right: 1em;
+	margin: 1em;
+	margin-bottom: 1em;
 }
 .desktopLayout .column.side { 
 	flex-grow: 0;
 	flex-shrink: 1;
 	max-width: 35%;
 	margin: 1em;
-	margin-top: 0em;
 	width: 30em; 
 }
 .desktopLayout .section.side { 
@@ -220,7 +220,7 @@ a, a:link, a:visited, a:hover, a:active {
 	max-width: 100%;
 }
 .desktop .section.player {
-	margin-bottom: 1em;
+	margin-bottom: 0.5em;
 }
 .desktop .section.banner {}
 .desktop .section.channel {}
